# diffintent-rtl

./: .gitignore  AGENTS.md  DiffIntent_RTL_Nature_Style_Article.docx  DiffIntent_RTL_Project_Execution_Plan.md  PROJECT_PLAN.md  README.md  RUN_PLAN.md  environment.yml  pyproject.toml  requirements.txt
configs/: ablation_message_only.yaml  ablation_no_context.yaml  ablation_no_line_type.yaml  ablation_no_multitask.yaml  bigru.yaml  data_opentitan_full.yaml  data_opentitan_smoke.yaml  hierarchical_transformer.yaml  mlp.yaml  tfidf_lr.yaml
outputs/metrics/: ablation_results.csv  dataset_stats.json  full_ablation_results.csv  full_main_results.csv  main_results.csv
outputs/predictions/: full_hierarchical_transformer_seed13_test_predictions.jsonl  full_tfidf_lr_seed13_test_predictions.jsonl
report/: final_report.md  final_report_assets.md
report/figures/: FIGURE_INDEX.md
scripts/: build_dataset.py  clone_repo.sh  evaluate.py  extract_commits.py  generate_holes.py  make_figures.py  make_report_assets.py  run_ablations.sh  run_all_baselines.sh  run_full_experiment.sh  run_smoke.sh  split_dataset.py  train.py  train_tfidf.py
src/: __init__.py
src/data/: __init__.py  collate.py  dataset.py  diff_parser.py  git_mining.py  hole_generation.py  labeling.py  tokenizer.py
src/models/: __init__.py  bigru.py  heads.py  hierarchical_transformer.py  mlp.py
src/training/: __init__.py  losses.py  metrics.py  runtime.py  trainer.py
src/utils/: __init__.py  (+4 more)
tests/: test_diff_parser.py  test_hole_generation.py  test_metrics.py  test_models_forward.py  test_tokenizer.py
