[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffintent-rtl"
version = "0.1.0"
description = "PyTorch experiments for RTL diff intent classification and implementation-hole detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

